# parrot

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.useCurrentArch  README.md  Revolt.toml  clippy.toml  compose.yml  default.nix  deny.toml  justfile  livekit.example.yml  release-please-config.json  rust-toolchain.toml
.github/workflows/: book.yml  docker.yaml  docs-test.yml  docs.yml  git-town.yml  publish-crates.yml  release-please.yml  release-webhook.yml  rust.yaml  triage_issue.yml  triage_pr.yml  validate-pr-title.yml
.mise/: config.toml
.mise/tasks/: build  check  publish  test
.mise/tasks/docker/: start  stop
.mise/tasks/docs/: _default  build  install
.mise/tasks/service/: api  crond  events  files  gifbox  proxy  pushd
crates/bindings/node/: Cargo.toml  package.json
crates/bindings/node/src/: lib.rs
crates/bonfire/: Cargo.toml  Dockerfile
crates/bonfire/src/: config.rs  database.rs  main.rs  websocket.rs
crates/bonfire/src/events/: impl.rs  state.rs
crates/core/coalesced/: Cargo.toml
crates/core/config/: Cargo.toml  Revolt.toml
crates/core/config/src/: lib.rs
crates/core/database/: Cargo.toml
crates/core/database/fixtures/: server_with_roles.json
crates/core/database/src/: lib.rs
crates/core/database/src/amqp/: amqp.rs
crates/core/database/src/drivers/: mod.rs  mongodb.rs
crates/core/database/src/events/: client.rs  rabbit.rs
crates/core/database/src/tasks/: ack.rs  apple_notifications.rs  process_embeds.rs  web_push.rs
crates/core/database/src/util/: bulk_permissions.rs  idempotency.rs  permissions.rs  reference.rs
crates/core/database/src/voice/: mod.rs
crates/core/database/templates/: deletion.html  deletion.original.html  deletion.txt  deletion.whitelabel.txt  reset-existing.html  reset-existing.original.html  reset-existing.txt  reset.html  reset.original.html  reset.txt  reset.whitelabel.txt  suspension.html  suspension.original.html  suspension.txt  verify.html  verify.original.html  verify.txt  verify.whitelabel.txt
crates/core/files/: Cargo.toml
crates/core/files/src/: lib.rs
crates/core/files/src/implementation/: encryption_impl.rs  media_impl.rs  mod.rs  s3_impl.rs
crates/core/files/src/repositories/: encryption_repository.rs  file_storage_repository.rs  media_repository.rs  mod.rs
crates/core/files/tests/: integration_test.rs  s3_test.rs
crates/core/models/: Cargo.toml
crates/core/models/src/v0/: channels.rs  embeds.rs  messages.rs  server_members.rs  servers.rs  users.rs
crates/core/parser/: Cargo.toml
crates/core/permissions/: Cargo.toml
crates/core/permissions/src/models/: mod.rs
crates/core/presence/: Cargo.toml
crates/core/ratelimits/: Cargo.toml
crates/core/result/: Cargo.toml
crates/core/result/src/: axum.rs  lib.rs  rocket.rs
crates/daemons/crond/: Cargo.toml  Dockerfile
crates/daemons/pushd/: Cargo.toml  Dockerfile
crates/daemons/pushd/src/: main.rs
crates/daemons/voice-ingress/: Cargo.toml  Dockerfile
crates/daemons/voice-ingress/src/: api.rs
crates/delta/: Cargo.toml  Dockerfile
crates/delta/fixtures/: server_with_many_roles.json
crates/delta/src/: main.rs
crates/delta/src/routes/: mod.rs  root.rs
crates/delta/src/routes/bots/: create.rs  delete.rs  edit.rs  fetch.rs  fetch_owned.rs  fetch_public.rs  invite.rs
crates/delta/src/routes/channels/: channel_ack.rs  channel_delete.rs  channel_edit.rs  channel_fetch.rs  group_add_member.rs  group_create.rs  group_remove_member.rs  invite_create.rs  members_fetch.rs  message_bulk_delete.rs  message_clear_reactions.rs  message_delete.rs  message_edit.rs  message_fetch.rs  message_pin.rs  message_query.rs  message_react.rs  message_search.rs  message_send.rs  message_unpin.rs  message_unreact.rs  permissions_set.rs  permissions_set_default.rs  voice_join.rs  webhook_create.rs  webhook_fetch_all.rs
crates/delta/src/routes/customisation/: emoji_create.rs  emoji_delete.rs  emoji_fetch.rs
crates/delta/src/routes/invites/: invite_delete.rs  invite_fetch.rs  invite_join.rs
crates/delta/src/routes/onboard/: complete.rs  hello.rs
crates/delta/src/routes/policy/: acknowledge_policy_changes.rs
crates/delta/src/routes/push/: subscribe.rs  unsubscribe.rs
crates/delta/src/routes/safety/: report_content.rs
crates/delta/src/routes/servers/: ban_create.rs  ban_list.rs  ban_remove.rs  channel_create.rs  emoji_list.rs  invites_fetch.rs  member_edit.rs  member_experimental_query.rs  member_fetch.rs  member_fetch_all.rs  member_remove.rs  permissions_set.rs  permissions_set_default.rs  roles_create.rs  roles_delete.rs  roles_edit.rs  roles_fetch.rs  server_ack.rs  server_create.rs  server_delete.rs  server_edit.rs  server_fetch.rs
crates/delta/src/routes/sync/: get_settings.rs  get_unreads.rs  set_settings.rs
crates/delta/src/routes/users/: add_friend.rs  block_user.rs  change_username.rs  edit_user.rs  fetch_dms.rs  fetch_profile.rs  fetch_self.rs  (+7 more)
crates/delta/src/util/: test.rs
crates/services/autumn/: Cargo.toml  Dockerfile
crates/services/autumn/src/: api.rs
crates/services/dove/: Cargo.toml  Dockerfile
crates/services/dove/src/: api.rs  main.rs  requests.rs  website_embed.rs
crates/services/gifbox/: Cargo.toml  Dockerfile
crates/services/january/: Cargo.toml  Dockerfile
crates/services/pigeon/: Cargo.toml  Dockerfile
crates/services/pigeon/src/: api.rs  clamav.rs  exif.rs  main.rs  metadata.rs  ratelimits.rs
doc/: book.toml
docs/: default.nix  docusaurus.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sidebars.ts
docs/docs/: faq.md  help.md  index.md
docs/docs/developers/: endpoints.md  legacy-plugin-api.md  libraries.md  stoat-migration-guide.md
docs/docs/developers/api/: _category_.json  authentication.md  permissions.mdx  ratelimits.md  uploading-files.md
docs/docs/developers/events/: _category_.json  establishing.md  protocol.md
docs/docs/developing/: contrib.md
docs/docs/developing/backend/: _category_.json  new_features.md
scripts/: build-image-layer.sh  publish-debug-image.sh  start.sh
(+88 files in other folders)
