[package]
name = "revolt-files"
version = "0.10.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Paul Makles <me@insrt.uk>"]
description = "Revolt Backend: S3 and encryption subroutines"
repository = "https://github.com/stoatchat/stoatchat"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }

ffprobe = "0.4.0"
imagesize = "0.13.0"
tempfile = "3.12.0"

base64 = "0.22.1"
aes-gcm = "0.10.3"
typenum = "1.17.0"

aws-config = "1.5.5"
aws-sdk-s3 = { version = "1.46.0", features = ["behavior-version-latest"] }

revolt-config = { version = "0.10.0", path = "../config", features = [
    "report-macros",
] }
revolt-result = { version = "0.10.0", path = "../result" }

# image processing
jxl-oxide = { workspace = true }
image = { workspace = true }

# svg rendering
usvg = "0.44.0"
resvg = "0.44.0"
tiny-skia = "0.11.4"

# encoding
webp = "0.3.0"

[dev-dependencies]
uuid = { workspace = true }
