[package]
name = "revolt-ratelimits"
version = "0.10.0"
edition = "2024"
license = "MIT"
authors = ["Zomatree <me@zomatree.live>", "Paul Makles <me@insrt.uk>"]
description = "Revolt Backend: Ratelimit Handler"
repository = "https://github.com/stoatchat/stoatchat"

[features]
rocket = [
    "dep:rocket",
    "dep:revolt_rocket_okapi",
    "revolt-database/rocket-impl",
]
axum = ["dep:axum", "revolt-database/axum-impl"]

default = ["rocket", "axum"]

[dependencies]
revolt-database = { version = "0.10.0", path = "../database" }
revolt-result = { version = "0.10.0", path = "../result" }
revolt-config = { version = "0.10.0", path = "../config" }

rocket = { version = "0.5.1", optional = true }
revolt_rocket_okapi = { version = "0.10.0", optional = true }

axum = { version = "0.7.5", optional = true, features = ["macros"] }

serde = { version = "1", features = ["derive"] }
authifier = { version = "1.0.15" }
dashmap = "5.2.0"
async-trait = "0.1.81"
log = "0.4"
