[package]
name = "revolt-crond"
version = "0.10.1"
license = "AGPL-3.0-or-later"
authors = ["Paul Makles <me@insrt.uk>"]
edition = "2021"
description = "Revolt Daemon Service: Timed data clean up tasks"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Utility
log = "0.4"

# Async
tokio = { version = "1" }

# Core
revolt-database = { version = "0.10.1", path = "../../core/database" }
revolt-result = { version = "0.10.1", path = "../../core/result" }
revolt-config = { version = "0.10.1", path = "../../core/config" }
revolt-files = { version = "0.10.1", path = "../../core/files" }
